Fix centering and button background for IE10

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 <div class="message-form-holder">
-
     <div class="message-form">
         <div class="message-form-icon-holder">
             <div class="message-form__icon">
@@ -30,7 +29,7 @@
                 <textarea class="message-form__textarea" name="message" placeholder="Write Us A Message"/></textarea>
             </div>
             <div class="message-form-row">
-                <button type="submit" class="message-form__button">Send</button>
+                <input type="submit" class="message-form__button" value="Send">
             </div>
         </form>
     </div>
